--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,4 +1,43 @@
-// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
-//
-// The variables you want to modify
-// $font-size-root: 20px;
+.home-page {
+  z-index: 2;
+  position: absolute;
+  top: 60%;
+  left: 20%;
+
+  .name { color: #45505b !important; }
+}
+
+.block-profile {
+  .pf-img {
+    background: url("~/assets/img/hero-bg.jpg") center no-repeat;
+    background-size: cover;
+    height: 240px;
+    position: relative;
+
+    .img {
+      position: absolute;
+      bottom: -60px;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
+      border-radius: 50%;
+      padding: 20px;
+      border: 2px solid #eee;
+    }
+  }
+
+  .pf-data {
+    width: 100%;
+    margin-top: 70px;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .home-page {
+    text-align: center !important;
+    left: 0;
+    right: 0;
+  }
+}
